# ic

./: .gitignore  README.md  README.org  lab-book.org
code/mpi/hello-world/: hello.slurm
code/starpu/hello-world/: CMakeLists.txt
code/starpu/starpu-cpp/: CMakeLists.txt
code/starpu/starpu-cpp/starpu-cpp/: CMakeLists.txt
code/starpu/vector-reduction/: CMakeLists.txt  Makefile  vector_reduc.c  vector_reduc.h  vector_scal.c
code/starpu/vector-reduction/cmake/: FindSTARPU.cmake
code/starpu/vector-reduction/inc/: starpu_helpers.h  vector_reduc.h
code/starpu/vector-reduction/src/: CMakeLists.txt  accumulate.cpp  cpp_accumulate.cpp  cpp_reduce.cpp  naive.c  openmp.c  starpu.c  starpu_helpers.c  vector_reduc.c
code/starpu/vector-reduction/src/helpers/: starpu_helpers.c  starpu_helpers.h
code/starpu/vector-reduction/src/reduc/: vector_reduc.c  vector_reduc.h
code/starpu/vector-reduction/src/utils/: utils.c  utils.h
code/starpu/vector-reduction/vector-reduction/: starpu_helpers.c  starpu_helpers.h  vector_reduc.c  vector_reduc.h
data/42/8b174d-ec00-474e-b65c-cc8671da1019/: init.org
documents/rep-ic-2019/: refs.bib  relatorio.org
documents/sic-2019/: do_diff.sh  poster-sic-2019.odp  slides_erad.org  summary.org
documents/sic-2019/slides/: beamerthemeUiB.sty  slides.org
experiments/mpi/hello-world/: hello.c
experiments/starpu-hello-world/: CMakeLists.txt
experiments/starpu/hello-world/: CMakeLists.txt  programa.c  vector_scal.c  vector_scal.cc
experiments/starpu/starpu-cpp/: CMakeLists.txt
experiments/starpu/vector-reduction/: CMakeLists.txt  vector_scal.c  vector_scal.cc
experiments/starpu/vector-reduction/starpu-cpp/: CMakeLists.txt
experiments/starpu/vector-reduction/starpu-cpp/inc/: Data.hpp
experiments/vector_reduction/: exp_book.org  launch.sh
experiments/vector_reduction/exp01/: exp.slurm  runs.csv  runs.plan  runs.starpu.plan  runs.varied.plan
experiments/vector_reduction/exp02/: exp.slurm  runs.plan
src/starpu-hello-world/: programa.c  vector_scal.c
